--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>PolyPulse | Dashboard</title>
+  <title>KindEcho | Dashboard</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -73,7 +73,7 @@
 <div class="container-fluid px-4 py-5">
   <div class="text-center mb-4">
   <h3 class="fw-bold" style="font-size: 1.9rem;" data-aos="fade-up">
-    <span class="logo-text2" style="font-weight:700 !important; font-size:33px;">PolyPulse</span> Dashboard
+    <span class="logo-text2" style="font-weight:700 !important; font-size:33px;">KindEcho</span> Dashboard
   </h3 >
 <p class="text-muted" style="font-size: 1rem;" data-aos="fade-up">
   Dive into your recent emotional analysis and explore communication insights.<br>
