--- a/templates/analyze.html
+++ b/templates/analyze.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>PolyPulse | Emotional Insight</title>
+  <title>KindEcho | Emotional Insight</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
@@ -163,7 +163,7 @@
 <div class="container my-5">
   <div class="text-center mb-4">
   <h3 class="fw-bold" style="font-size: 1.9rem;" data-aos="fade-up">
-    <span class="logo-text2" style="font-weight:700 !important; font-size:35px;">PolyPulse</span> Insight Tool
+    <span class="logo-text2" style="font-weight:700 !important; font-size:35px;">KindEcho</span> Insight Tool
   </h3 >
   <p class="text-muted" style="font-size: 1rem;"  data-aos="fade-up">
     Analyze your text or image-based messages to detect emotionally harmful expressions.<br>
@@ -175,7 +175,7 @@
     <!-- Left Column: Chat Input -->
     <div class="col-md-6 mb-4"  data-aos="fade-right" data-aos-delay="500">
       <div class="chat-box h-100">
-<!--        <h3 class="text-center mb-4"><span class="logo-text">PolyPulse</span> Emotional Analyzer</h3>-->
+<!--        <h3 class="text-center mb-4"><span class="logo-text">KindEcho</span> Emotional Analyzer</h3>-->
         <form id="analyzeForm">
           <textarea class="form-control chat-input" name="message" placeholder="Type or paste your message here..." id="messageInput"></textarea>
 
