--- a/templates/nav.html
+++ b/templates/nav.html
@@ -62,7 +62,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm sticky-top">
   <div class="container">
-<a href="/" class="navbar-brand logo-text">PolyPulse</a>
+<a href="/" class="navbar-brand logo-text">KindEcho</a>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
       aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
