--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PolyPulse | Signup</title>
+  <title>KindEcho | Signup</title>
   <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon" />
 <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@600&display=swap" rel="stylesheet">
 
@@ -79,7 +79,7 @@
 <body>
 
   <div class="signup-card">
-    <h3 class="text-center">Create Your <span class="logo-text">PolyPulse</span> Account</h3>
+    <h3 class="text-center">Create Your <span class="logo-text">KindEcho</span> Account</h3>
     <form method="POST" action="/signup">
       <div class="mb-3">
         <label class="form-label">Full Name</label>
